force-app/main/default/objects/Opportunity/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <label>Contract Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>