force-app/main/default/objects/Opportunity/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <label>Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>