force-app/main/default/objects/Opportunity/fields/Table_Data__c.field-meta.xml
<CustomField>
    <fullName>Table_Data__c</fullName>
    <label>Table Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>